# cii

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README  main.c
examples/: CMakeLists.txt  basename.c  calc.c  cref.c  double.c  idents.c  ids.c  iref.c  kref.c  mpcalc.c  sieve.c  sort.c  spin.c  wf.c  words.c  xref.c
include/: mem.h  memchk.h  str.h  thread.h
include_examples/: basename.h
misc/: CMakeLists.txt  maxalign.c
src/: CMakeLists.txt  ap.c  arena.c  arith.c  array.c  chan.c  memchk.c  memcmp.c  memmove.c  str.c  strerror.c  strncmp.c  thread-nt.c  thread.c
